--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
           "name": "kuldeep198811/country-lang",
           "version":"master",
           "source": {
-              "url": "https://github.com/kuldeep198811/country-lang.git",
+              "url": "kuldeep198811@github.com:kuldeep198811/country-lang.git",
               "type": "git",
               "reference":"master"
             }
