--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,8 @@
-"repositories": [
-    {
-        "type":"package",
-        "package": {
-          "name": "kuldeep198811/country-lang",
-          "version":"master",
-          "source": {
-              "url": "kuldeep198811@github.com:kuldeep198811/country-lang.git",
-              "type": "git",
-              "reference":"master"
-            }
+{
+    "repositories": {
+        "repo-name": {
+            "type": "vcs",
+            "url": "https://github.com/kuldeep198811/country-lang.git"
         }
     }
-],
-"require": {
-    "kuldeep198811/country-lang": "master"
 }
