--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "repositories": {
-        "repo-name": {
+        "country-lang": {
             "type": "vcs",
             "url": "https://github.com/kuldeep198811/country-lang.git"
         }
