--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "repositories": {
-        "country-lang": {
-            "type": "vcs",
-            "url": "https://github.com/kuldeep198811/country-lang.git"
-        }
+"repositories":[
+    {
+        "type": "vcs",
+        "url": "git@github.com:kuldeep198811/country-lang.git"
     }
+]
 }
