--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "repositories": [
     {
-      "type": "git",
+      "type": "vcs",
       "url": "https://github.com/kuldeep198811/country-lang.git"
     }
   ],
