--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "https://github.com/kuldeep198811/country-lang"
+      "url": "https://github.com/kuldeep198811/country-lang.git"
     }
   ],
 
