--- a/composer.json
+++ b/composer.json
@@ -4,5 +4,9 @@
       "type": "vcs",
       "url": "https://github.com/kuldeep198811/country-lang.git"
     }
-  ]
+  ],
+  
+  "require"          : {
+    "public/repository": "dev-master",
+  }
 }
