--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,19 @@
 {
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/kuldeep198811/country-lang.git"
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "name": "kuldeep198811/country-lang",
+                "version": "dev-master",
+                "source": {
+                    "url": "https://github.com/kuldeep198811/country-lang",
+                    "type": "git",
+                    "reference": "origin/master"
+                }
+            }
+        }
+    ],
+    "require": {
+        "kuldeep198811/country-lang": "dev-master"
     }
-  ],
-  
-  "require"          : {
-    "public/repository": "dev-master"
-  }
 }
