--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
             "type": "package",
             "package": {
                 "name": "kuldeep198811/country-lang",
-                "version": "dev-master",
+                "version": "^1.0",
                 "source": {
                     "url": "https://github.com/kuldeep198811/country-lang",
                     "type": "git",
