--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,6 @@
 {
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/kuldeep198811/country-lang"
-        },
-        {
-            "type": "package",
-            "package": {
-                "name": "kuldeep198811/country-lang",
-                "version": "^1.0",
-                "source": {
-                    "url": "https://github.com/kuldeep198811/country-lang",
-                    "type": "git",
-                    "reference": "origin/master"
-                }
-            }
-        }
-    ],
-    "require": {
-        "kuldeep198811/country-lang": "dev-master"
-    }
+    "name": "kuldeep198811/country-lang",
+    "type": "symfony-pack",
+    "license": "MIT",
+    "description": "A pack for functional and end-to-end testing within a Symfony app",
 }
