--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "kuldeep198811/country-lang",
-    "type": "symfony-pack",
+    "type": "country-lang",
     "license": "MIT",
     "description": "A pack for functional and end-to-end testing within a Symfony app"
 }
