--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,5 @@
     "name": "kuldeep198811/country-lang",
     "type": "country-lang",
     "license": "MIT",
-    "description": "country-lang"
+    "description": "Api to check country language group"
 }
