--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
-{
-    "name": "kuldeep198811/country-lang",
-    "type": "country-lang",
-    "license": "MIT",
-    "description": "Api to check country language group"
-}
+"repositories":[
+    {
+        "type": "vcs",
+        "url": "git@github.com:kuldeep198811/country-lang.git"
+    }
+]
