--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "repositories":[
         {
             "type": "vcs",
-            "url": "git@github.com:kuldeep198811/country-lang.git"
+            "url": "https://github.com/kuldeep198811/country-lang/archive/1.0.zip"
         }
     ]
 }
