--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
-{
-    "repositories":[
-        {
-            "type": "vcs",
-            "url": "https://github.com/kuldeep198811/country-lang/archive/1.0.zip"
+"config": {
+    "fxp-asset": {
+    "installer-paths": {
+        "country-lang-library": "country-lang"
+    },
+    "repositories": {
+        "kuldeep198811/country-lang": {
+        "type": "vcs",
+        "url": "https://github.com/kuldeep198811/country-lang.git"
         }
-    ]
+    }
+},
+"process-timeout": 1800
 }
