updating final composer file

--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,23 @@
-"config": {
-    "fxp-asset": {
-    "installer-paths": {
-        "country-lang-library": "country-lang"
-    },
-    "repositories": {
-        "kuldeep198811/country-lang": {
-        "type": "vcs",
-        "url": "https://github.com/kuldeep198811/country-lang.git"
+{
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/kuldeep198811/country-lang"
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "kuldeep198811/country-lang",
+                "version": "^1.0",
+                "source": {
+                    "url": "https://github.com/kuldeep198811/country-lang",
+                    "type": "git",
+                    "reference": "origin/master"
+                }
+            }
         }
+    ],
+    "require": {
+        "kuldeep198811/country-lang": "dev-master"
     }
-},
-"process-timeout": 1800
 }
