--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "country-language-group-check",
-    "type": "country-lang",
-    "require": {
-        "kuldeep198811/country-lang": "dev-master"
+    "version": "1.0",
+    "dist": {
+        "url": "https://github.com/kuldeep198811/country-lang/archive/1.0.zip",
+        "type": "zip"
     }
 }
