--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
-{
-    "name": "country-language-group-check",
-    "version": "1.0",
-    "dist": {
-        "url": "https://github.com/kuldeep198811/country-lang/archive/1.0.zip",
-        "type": "zip"
-    }
-}
+"require": {
+	"country-lang/releases": "1.0",
+	"country-lang": "dev-master"
+},
+"repositories": [
+    {
+        "type": "vcs",
+    	"url": "https://github.com/kuldeep198811/country-lang"
+	}
+]
