--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,17 @@
-"require": {
-	"country-lang/releases": "1.0",
-	"country-lang": "dev-master"
-},
 "repositories": [
     {
-        "type": "vcs",
-    	"url": "https://github.com/kuldeep198811/country-lang"
-	}
-]
+        "type":"package",
+        "package": {
+          "name": "country-language-group-check",
+          "version":"master",
+          "source": {
+              "url": "https://github.com/kuldeep198811/country-lang.git",
+              "type": "git",
+              "reference":"master"
+            }
+        }
+    }
+],
+"require": {
+    "kuldeep198811/country-lang": "master"
+}
