--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "source": {
             "url": "https://github.com/kuldeep198811/country-lang.git",
             "type": "git",
-            "reference": "master" //git branch-name
+            "reference": "master"
         }
     }
 }],
