--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,11 @@
 {
     "repositories": [
-    {
-        "type": "package",
-        "package": {
-            "name": "9992818439",
-            "version": "1.0",
-            "source": {
-                "url": "https://github.com/kuldeep198811/country-lang.git",
-                "type": "git",
-                "reference": "master"
-            }
+        {
+            "url": "https://github.com/kuldeep198811/country-lang.git",
+            "type": "git"
         }
-    }],
-    "require" : {
-      "9992818439": "1.0"
+    ],
+    "require": {
+        "gedmo/doctrine-extensions": "~2.3"
     }
 }
