--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,23 @@
 {
     "repositories": [
         {
-            "url": "https://github.com/kuldeep198811/country-lang.git",
-            "type": "git"
+            "type": "vcs",
+            "url": "https://github.com/kuldeep198811/country-lang"
+        },
+        {
+            "type": "package",
+            "package": {
+                "name": "kuldeep198811/country-lang",
+                "version": "^1.0",
+                "source": {
+                    "url": "https://github.com/kuldeep198811/country-lang",
+                    "type": "git",
+                    "reference": "origin/master"
+                }
+            }
         }
     ],
     "require": {
-        "gedmo/doctrine-extensions": "~2.3"
+        "kuldeep198811/country-lang": "dev-master"
     }
 }
